--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -10,6 +10,14 @@
 separator=true
 separator_block_width=15
 
+[wifi]
+command=/home/neho/.config/i3/wifi.sh
+interval=10
+
+[brightness]
+command=/home/neho/.config/i3/brightness.sh
+interval=10
+
 [volume]
 instance=Master
 interval=1
