--- a/kitty/themes/kitty.conf
+++ b/kitty/themes/kitty.conf
@@ -1,5 +1,5 @@
 # Fuente
-include ./themes/Eldritch.conf
+include ./themes/CyberpunkNeon.conf
 
 font_family IntoneMono Nerd Font Mono
 bold_font auto
