--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # Fuente
-include ./themes/Eldritch.conf
+include ./themes/Catppuccin-Mocha.conf
 
 font_family IntoneMono Nerd Font Mono
 bold_font auto
@@ -38,4 +38,4 @@ window_border_width 2.0pt
 window_margin_width 10
 
 # Colores
-background_opacity 0.8
+background_opacity 1.0
