Pipewire wpctl limite 100%

--- a/Hyprland/hypr/hyprland.conf
+++ b/Hyprland/hypr/hyprland.conf
@@ -7,7 +7,7 @@ monitor= eDP-1, 1920x1200@60, 0x0, 1
 ### MY PROGRAMS ###
 ###################
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = thunar
 $menu = wofi --show drun
 
 #################
@@ -197,7 +197,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Teclas de la Notebook
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ -l 1
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
