hyprlock, hypridle, wofi (catpuccin)

--- a/Hyprland/hypr/hyprland.conf
+++ b/Hyprland/hypr/hyprland.conf
@@ -21,6 +21,7 @@ exec-once = hyprpolkitagent
 exec-once = wl-paste -t text --watch clipman store --no-persist
 exec-once = udiskie
 exec-once = dunst
+exec-once = hypridle
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -134,6 +135,8 @@ $mainMod = SUPER
 
 # PERSONALIZADAS
 
+	# Hyprlock
+bind = $mainMod, L, exec, hyprlock
 	# Clipman
 # bind = SUPER, V, exec, clipman pick -t wofi
 
