Waybar icono mute fix y ajuste los iconos

--- a/Hyprland/waybar/config.jsonc
+++ b/Hyprland/waybar/config.jsonc
@@ -55,7 +55,7 @@
         "tooltip": false
     },
     "memory": {
-        "format": "{}% "
+        "format": "{}% "
     },
     "backlight": {
         "device": "intel_backlight",
@@ -69,8 +69,8 @@
         },
         "format": "{capacity}% {icon}",
         "format-full": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
+        "format-charging": "{capacity}% ",
+        "format-plugged": "{capacity}% 󱉞",
         "format-alt": "{time} {icon}",
         "format-icons": [" ", " ", " ", " ", " "]
     },
@@ -96,8 +96,8 @@
     "pulseaudio": {
         "format": "{volume}% {icon} {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
+        "format-bluetooth-muted": "    {icon} {format_source}",
+        "format-muted": "    {format_source}",
         "format-source": "{volume}% ",
         "format-source-muted": "",
         "format-icons": {
@@ -107,7 +107,7 @@
             "phone": "",
             "portable": "",
             "car": "",
-            "default": [" ", " ", " "]
+            "default": ["   ", "   ", "   "]
         },
         "on-click": "pavucontrol"
     },
