--- a/Hyprland/waybar/config.jsonc
+++ b/Hyprland/waybar/config.jsonc
@@ -7,43 +7,46 @@
     "modules-left": [
         "hyprland/workspaces",
         "hyprland/submap",
-        "custom/media"
-    ],
-    "modules-center": [
         "hyprland/window"
     ],
+    "modules-center": [
+    ],
     "modules-right": [
-        "idle_inhibitor",
-        "pulseaudio",
-        "network",
-        "power-profiles-daemon",
-        "cpu",
-        "memory",
+	"cpu",
+	"memory",
         "backlight",
         "battery",
-        "clock",
+        "pulseaudio",
+        "network",
         "tray",
+	"custom/weather",
+	"clock",
         "custom/power"
     ],
     // Configuracion de cada Modulo
     "hyprland/workspaces": {
         "format": "{icon}",
+        "format-icons": {
+            "1": "",
+            "2": "",
+            "3": "",
+            "4": "",
+            "5": "",
+            "6": "",
+            "7": "",
+            "8": "",
+            "9": "",
+            "10": ""
+        },
         "on-scroll-up": "hyprctl dispatch workspace e+1",
         "on-scroll-down": "hyprctl dispatch workspace e-1"
     },
     "hyprland/submap": {
         "format": "<span style=\"italic\">{}</span>"
     },
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": " ",
-            "deactivated": " "
-        }
-    },
-    "tray": {
-        //"icon-size": 21,
-        "spacing": 10
+    "hyprland/window": {
+	"icon": true,
+	"icon-size": 20
     },
     "clock": {
         "timezone": "America/Argentina/Cordoba",
@@ -74,29 +77,18 @@
         "format-alt": "{time} {icon}",
         "format-icons": [" ", " ", " ", " ", " "]
     },
-    "power-profiles-daemon": {
-      "format": "{icon}",
-      "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
-      "tooltip": true,
-      "format-icons": {
-        "default": "",
-        "performance": "",
-        "balanced": "",
-        "power-saver": ""
-      }
-    },
     "network": {
-        "format-wifi": "{essid} ({signalStrength}%) ",
+        "format-wifi": "{essid}  {signalStrength}%  ",
         "format-ethernet": "{ipaddr}/{cidr} ",
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
+        "format-disconnected": "⚠",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
         "format": "{volume}% {icon} {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": "    {icon} {format_source}",
+        "format-bluetooth": "{volume}% {icon}   {format_source}",
+        "format-bluetooth-muted": "  {icon}   {format_source}",
         "format-muted": "    {format_source}",
         "format-source": "{volume}% ",
         "format-source-muted": "",
@@ -111,21 +103,20 @@
         },
         "on-click": "pavucontrol"
     },
-    "custom/media": {
-        "format": "{icon} {}",
-        "return-type": "json",
-        "max-length": 40,
-        "format-icons": {
-            "spotify": "",
-            "default": "🎜"
-        },
-        "escape": true,
-        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-        // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
+    "tray": {
+        //"icon-size": 21,
+        "spacing": 10
     },
     "custom/power": {
         "format": " ⏻ ",
         "tooltip": false,
         "on-click": "wlogout"
+    },
+    "custom/weather": {
+        "format": "{}°",
+        "tooltip": true,
+        "interval": 3600,
+        "exec": "wttrbar --date-format '%d/%m' --location 'Cordoba Cordoba Argentina' --lang es",
+        "return-type": "json"
     }
 }
