--- a/Hyprland/waybar/themes/mocha/config.jsonc
+++ b/Hyprland/waybar/themes/mocha/config.jsonc
@@ -23,16 +23,7 @@
     "hyprland/workspaces": {
         "format": "{icon}",
         "format-icons": {
-            "1": "",
-            "2": "",
-            "3": "",
-            "4": "",
-            "5": "",
-            "6": "",
-            "7": "",
-            "8": "",
-            "9": "",
-            "10": ""
+             "default": "  "
         },
         "on-scroll-up": "hyprctl dispatch workspace e+1",
         "on-scroll-down": "hyprctl dispatch workspace e-1"
@@ -82,7 +73,7 @@
         "on-click": "pavucontrol"
     },
     "tray": {
-        //"icon-size": 21,
+        "icon-size": 21,
         "spacing": 10
     },
     "custom/power": {
