hyprland config update

--- a/Hyprland/hypr/hyprland.conf
+++ b/Hyprland/hypr/hyprland.conf
@@ -39,8 +39,8 @@ general {
 
     border_size = 2
 
-    col.active_border = rgba(94E2D5ff) rgba(89B4FAff) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(CAA8F9ff) rgba(89B4FAff) 45deg
+    col.inactive_border = rgba(A6ADC8aa)
 
     resize_on_border = false
 
@@ -56,12 +56,12 @@ decoration {
     inactive_opacity = 1.0
 
     drop_shadow = false
-    shadow_range = 4
+    shadow_range = 20
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 
     blur {
-        enabled = false23
+        enabled = false
         size = 3
         passes = 1
 
