--- a/Hyprland/waybar/backups/configMPD.jsonc
+++ b/Hyprland/waybar/backups/configMPD.jsonc
@@ -29,7 +29,7 @@
         "on-scroll-down": "hyprctl dispatch workspace e-1"
     },
     "hyprland/window": {
-	"format": "{}   ",
+	"format": "{}",
 	"icon": true,
 	"icon-size": 20,
 	"max-length": 40
@@ -111,13 +111,39 @@
         "exec": "wttrbar --date-format '%d/%m' --location 'Cordoba Cordoba Argentina' --lang es",
         "return-type": "json"
     },
+    "mpd": {
+        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}  {title}    {elapsedTime:%M:%S}  {totalTime:%M:%S} 󱫜",
+        "format-disconnected": "󰝛",
+        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}󱎫",
+        "interval": 10,
+        "consume-icons": {
+		"on": " " // Icon shows only when "consume" is on
+	},
+	"random-icons": {
+		//"off": "<span color=\"#f53c3c\"></span> ", // Icon grayed out when "random" is off
+		"on": " "
+	},
+	"repeat-icons": {
+		"on": " "
+	},
+	"single-icons": {
+		"on": "1 "
+	},
+	"state-icons": {
+		"paused": "",
+		"playing": ""
+	},
+	"tooltip-format": "MPD (connected)",
+	"tooltip-format-disconnected": "MPD (disconnected)"
+	}
+    },
     "custom/music": {
-        "format": "    {}",
+        "format": "  {}",
         "escape": true,
         "interval": 5,
         "tooltip": false,
-        "exec": "playerctl metadata --format='{{ artist }}  󰇙    {{ title }}  󰇙 󱎫  {{ duration(mpris:length) }}'",
+        "exec": "playerctl metadata --format='{{ title }}'",
 	"on-click": "playerctl play-pause",
-        "max-length": 100
+        "max-length": 30
     }
 }
