--- a/Hyprland/waybar/themes/mocha/config.jsonc
+++ b/Hyprland/waybar/themes/mocha/config.jsonc
@@ -29,15 +29,36 @@
         "on-scroll-down": "hyprctl dispatch workspace e-1"
     },
     "hyprland/window": {
-	"format": "{}",
+	"format": "{}   ",
 	"icon": true,
 	"icon-size": 20,
 	"max-length": 40
     },
     "clock": {
-        "timezone": "America/Argentina/Cordoba",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%d/%m/%Y}"
+    "timezone": "America/Argentina/Cordoba",
+    "format": "{:%H:%M} 󱑒",
+    "format-alt": "{:%A, %B %d, %Y     %R} 󱑒",
+    "tooltip-format": "<tt><small>{calendar}</small></tt>",
+    "calendar": {
+        "mode"          : "year",
+        "mode-mon-col"  : 3,
+        "weeks-pos"     : "right",
+        "on-scroll"     : 1,
+        "format": {
+            "months":     "<span color='#ffead3'><b>{}</b></span>",
+            "days":       "<span color='#ecc6d9'><b>{}</b></span>",
+            "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
+            "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+            "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+        }
+    },
+    "actions":  {
+	"on-click-right": "mode",
+	"on-scroll-up": "tz_up",
+	"on-scroll-down": "tz_down",
+	"on-scroll-up": "shift_up",
+	"on-scroll-down": "shift_down"
+	}
     },
     "backlight": {
         "device": "intel_backlight",
@@ -91,12 +112,12 @@
         "return-type": "json"
     },
     "custom/music": {
-        "format": "   {}",
+        "format": "    {}",
         "escape": true,
         "interval": 5,
         "tooltip": false,
-        "exec": "playerctl metadata --format='{{ title }}'",
-        "on-click": "playerctl play-pause",
-        "max-length": 50
+        "exec": "playerctl metadata --format='{{ artist }}  󰇙    {{ title }}  󰇙 󱎫  {{ duration(mpris:length) }}'",
+	"on-click": "playerctl play-pause",
+        "max-length": 100
     }
 }
