--- a/Hyprland/waybar/config.jsonc
+++ b/Hyprland/waybar/config.jsonc
@@ -23,7 +23,16 @@
     "hyprland/workspaces": {
         "format": "{icon}",
         "format-icons": {
-             "default": ""
+            "1": "󰲠",
+            "2": "󰲢",
+            "3": "󰲤",
+            "4": "󰲦",
+            "5": "󰲨",
+            "6": "󰲪",
+            "7": "󰲬",
+            "8": "󰲮",
+            "9": "󰲰",
+            "10": "󰿬"
         },
         "on-scroll-up": "hyprctl dispatch workspace e+1",
         "on-scroll-down": "hyprctl dispatch workspace e-1"
@@ -36,8 +45,8 @@
     },
     "clock": {
     "timezone": "America/Argentina/Cordoba",
-    "format": "{:%H:%M} 󱑒",
-    "format-alt": "{:%A, %B %d, %Y     %R} 󱑒",
+    "format-alt": "{:%H:%M} 󱑒",
+    "format": "{:%b %d     %R} 󱑒",
     "tooltip-format": "<tt><small>{calendar}</small></tt>",
     "calendar": {
         "mode"          : "year",
@@ -78,7 +87,7 @@
         "format-icons": [" ", " ", " ", " ", " "]
     },
     "pulseaudio": {
-        "format": "{volume}% {icon}	{format_source}",
+        "format": "{volume}% {icon}	 {format_source}",
         "format-bluetooth": "{volume}% {icon}   {format_source}",
         "format-bluetooth-muted": "  {icon}   {format_source}",
         "format-muted": "    {format_source}",
