--- a/Hyprland/hypr/hyprland.conf
+++ b/Hyprland/hypr/hyprland.conf
@@ -22,6 +22,7 @@ exec-once = wl-paste -t text --watch clipman store --no-persist
 exec-once = udiskie
 exec-once = dunst
 exec-once = hypridle
+# exec-once = mpd /etc/mpd.conf
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -55,7 +56,7 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = false
+    drop_shadow = truek
     shadow_range = 20
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
