--- a/Hyprland/hypr/hyprlock.conf
+++ b/Hyprland/hypr/hyprlock.conf
@@ -29,7 +29,7 @@ input-field {
     font_family = Noto Sans # Font used for placeholder_text, fail_text and dots_text_format.
     fade_on_empty = true
     fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
+    placeholder_text = <i>Password...</i> # Text rendered in the input box when it's empty.
     hide_input = false
     rounding = -1 # -1 means complete rounding (circle/oval)
     check_color = rgb(204, 136, 34)
