--- a/Hyprland/waybar/themes/mocha/config.jsonc
+++ b/Hyprland/waybar/themes/mocha/config.jsonc
@@ -45,8 +45,8 @@
     },
     "clock": {
     "timezone": "America/Argentina/Cordoba",
-    "format": "{:%H:%M} 󱑒",
-    "format-alt": "{:%A, %B %d, %Y     %R} 󱑒",
+    "format-alt": "{:%H:%M} 󱑒",
+    "format": "{:%b %d     %R} 󱑒",
     "tooltip-format": "<tt><small>{calendar}</small></tt>",
     "calendar": {
         "mode"          : "year",
@@ -87,7 +87,7 @@
         "format-icons": [" ", " ", " ", " ", " "]
     },
     "pulseaudio": {
-        "format": "{volume}% {icon}	{format_source}",
+        "format": "{volume}% {icon}	 {format_source}",
         "format-bluetooth": "{volume}% {icon}   {format_source}",
         "format-bluetooth-muted": "  {icon}   {format_source}",
         "format-muted": "    {format_source}",
