Hyprland shadows config update v0.45

--- a/Hyprland/hypr/hyprland.conf
+++ b/Hyprland/hypr/hyprland.conf
@@ -22,7 +22,7 @@ exec-once = wl-paste -t text --watch clipman store --no-persist
 exec-once = udiskie
 exec-once = dunst
 exec-once = hypridle
-# exec-once = mpd /etc/mpd.conf
+exec-once = mpd /etc/mpd.conf
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -56,10 +56,12 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = truek
-    shadow_range = 20
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+        enabled = true
+	range = 20
+	render_power = 3
+	color = rgba(1a1a1aee)
+    }
 
     blur {
         enabled = false
