--- a/Hyprland/hypr/themes/catppuccin/hyprland.conf
+++ b/Hyprland/hypr/themes/catppuccin/hyprland.conf
@@ -40,8 +40,8 @@ general {
 
     border_size = 2
 
-    col.active_border = rgba(c5c8c6ff)
-    col.inactive_border = rgba(1d1f21ff)
+    col.active_border = rgba(CAA8F9ff) rgba(89B4FAff) 45deg
+    col.inactive_border = rgba(A6ADC8aa)
 
     resize_on_border = false
 
@@ -60,7 +60,7 @@ decoration {
         enabled = true
 	range = 20
 	render_power = 3
-	color = rgba(1d1f21ff)
+	color = rgba(1a1a1aee)
     }
 
     blur {
