kitty tomorrow night

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,12 +1,12 @@
 # Fuente
-include ./themes/Catppuccin-Mocha.conf
+include ./themes/Tomorrow_Night.conf
 
-font_family MesloLGS Nerd Font
+font_family Terminess Nerd Font
 bold_font auto
 italic_font auto
 bold_italic_font auto
 
-font_size 10.0
+font_size 12.0
 
 # Cursor
 
