--- a/Hyprland/hypr/themes/tomorrow-night/hyprland.conf
+++ b/Hyprland/hypr/themes/tomorrow-night/hyprland.conf
@@ -57,7 +57,7 @@ decoration {
     inactive_opacity = 1.0
 
     shadow {
-        enabled = true
+        enabled = false
 	range = 20
 	render_power = 3
 	color = rgba(1d1f21ff)
