--- a/cava/themes/catppuccin/config
+++ b/cava/themes/catppuccin/config
@@ -230,14 +230,16 @@
 # background must also be defined in hex or remain commented out. 1 = on, 0 = off.
 # You can define as many as 8 different colors. They range from bottom to top of screen
 gradient = 1
-gradient_color_1 = '#1d1f21'  # Base/fondo
-gradient_color_2 = '#cc6666'  # Rojo
-gradient_color_3 = '#f0c574'  # Amarillo
-gradient_color_4 = '#b5bd68'  # Verde
-gradient_color_5 = '#80a1bd'  # Azul
-gradient_color_6 = '#b294ba'  # Morado
-gradient_color_7 = '#8abdb6'  # Cyan
-gradient_color_8 = '#c4c8c6'  # Texto/gris claro
+gradient_color_1 = '#94e2d5'
+gradient_color_2 = '#89dceb'
+gradient_color_3 = '#74c7ec'
+gradient_color_4 = '#89b4fa'
+gradient_color_5 = '#cba6f7'
+gradient_color_6 = '#f5c2e7'
+gradient_color_7 = '#eba0ac'
+gradient_color_8 = '#f38ba8'
+
+
 
 [smoothing]
 
