hyprland update for new laptop

--- a/Hyprland/hypr/hyprland.conf
+++ b/Hyprland/hypr/hyprland.conf
@@ -1,7 +1,7 @@
 ################
 ### MONITORS ###
 ################
-monitor= eDP-1, 1920x1200@60, 0x0, 1
+monitor=eDP-1,3200x2000@120,0x0,2
 
 ###################
 ### MY PROGRAMS ###
@@ -10,25 +10,26 @@ $terminal = kitty
 $fileManager = thunar
 $menu = wofi --show drun
 
+
 #################
 ### AUTOSTART ###
 #################
+exec-once = wpaperd -d
+exec-once = systemctl --user start hyprpolkitagent
+exec-once = dunst
+exec-once = udiskie
+exec-once = hypridle
 exec-once = nm-applet &
 exec-once = blueman-applet &
 exec-once = waybar
-exec-once = wpaperd -d
-exec-once = hyprpolkitagent
-exec-once = wl-paste -t text --watch clipman store --no-persist
-exec-once = udiskie
-exec-once = dunst
-exec-once = hypridle
-exec-once = mpd /etc/mpd.conf
+exec-once = thunar --daemon
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
 
 #####################
 ### LOOK AND FEEL ###
@@ -40,8 +41,8 @@ general {
 
     border_size = 2
 
-    col.active_border = rgba(c5c8c6ff)
-    col.inactive_border = rgba(1d1f21ff)
+    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.inactive_border = rgba(595959aa)
 
     resize_on_border = false
 
@@ -52,19 +53,20 @@ general {
 
 decoration {
     rounding = 10
+    rounding_power = 2
 
     active_opacity = 1.0
     inactive_opacity = 1.0
 
     shadow {
-        enabled = false
-	range = 20
-	render_power = 3
-	color = rgba(1d1f21ff)
+        enabled = true
+        range = 4
+        render_power = 3
+        color = rgba(1a1a1aee)
     }
 
     blur {
-        enabled = false
+        enabled = true
         size = 3
         passes = 1
 
@@ -75,14 +77,28 @@ decoration {
 animations {
     enabled = true
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = easeOutQuint,0.23,1,0.32,1
+    bezier = easeInOutCubic,0.65,0.05,0.36,1
+    bezier = linear,0,0,1,1
+    bezier = almostLinear,0.5,0.5,0.75,1.0
+    bezier = quick,0.15,0,0.1,1
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = global, 1, 10, default
+    animation = border, 1, 5.39, easeOutQuint
+    animation = windows, 1, 4.79, easeOutQuint
+    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
+    animation = windowsOut, 1, 1.49, linear, popin 87%
+    animation = fadeIn, 1, 1.73, almostLinear
+    animation = fadeOut, 1, 1.46, almostLinear
+    animation = fade, 1, 3.03, quick
+    animation = layers, 1, 3.81, easeOutQuint
+    animation = layersIn, 1, 4, easeOutQuint, fade
+    animation = layersOut, 1, 1.5, linear, fade
+    animation = fadeLayersIn, 1, 1.79, almostLinear
+    animation = fadeLayersOut, 1, 1.39, almostLinear
+    animation = workspaces, 1, 1.94, almostLinear, fade
+    animation = workspacesIn, 1, 1.21, almostLinear, fade
+    animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
 
 dwindle {
@@ -95,10 +111,10 @@ master {
 }
 
 misc {
-    vfr = true
     force_default_wallpaper = -1
     disable_hyprland_logo = false
 }
+
 
 #############
 ### INPUT ###
@@ -131,23 +147,21 @@ device {
     sensitivity = -0.5
 }
 
+
 ###################
 ### KEYBINDINGS ###
 ###################
+
 $mainMod = SUPER
 
-# PERSONALIZADAS
-
-	# Hyprlock
+# Hyprlock
 bind = $mainMod, L, exec, hyprlock
-	# Clipman
-# bind = SUPER, V, exec, clipman pick -t wofi
 
-	# Screenshots
+# Screenshots
 bind = CTRL ALT, S, exec, grim -g "$(slurp)" /home/neho/Pictures/Screenshots/$(date +'%s_grim.png')
 bind = SHIFT ALT, S, exec, grim -g "$(slurp -d)" - | wl-copy
 
-	# Reiniciar Waybar
+# Reiniciar Waybar
 bind = $mainMod, K, exec, /home/neho/.config/hypr/kill-bar.sh
 
 # Atajos
@@ -157,8 +171,8 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, P, pseudo,
+bind = $mainMod, J, togglesplit,
 
 # Focus
 bind = $mainMod, left, movefocus, l
@@ -178,7 +192,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Mover Ventana a un workspace.
+# Mover ventana a un workspace
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -190,7 +204,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Workspace Especial (scratchpad)
+# Workspace especial
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
@@ -219,6 +233,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
+
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
 
