--- a/Hyprland/hypr/hyprlock.conf
+++ b/Hyprland/hypr/hyprlock.conf
@@ -1,6 +1,6 @@
 background {
     monitor =
-    path = /home/neho/Pictures/linux/hyprland/end_4.png   # supports png, jpg, webp (no animations, though)
+    path = /home/neho/Pictures/wg/wallhaven-76zvd3.jpg
     color = rgba(30, 30, 46, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
@@ -11,6 +11,7 @@ background {
     brightness = 0.8172
     vibrancy = 0.1696
     vibrancy_darkness = 0.0
+    screencopy_mode = 0  # 0 - gpu acelerado, 1 - basado en cpu
 }
 
 input-field {
@@ -33,15 +34,16 @@ input-field {
     hide_input = false
     rounding = -1 # -1 means complete rounding (circle/oval)
     check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
+    fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg # if authentication failed, changes outer_color and fail message color
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
     fail_timeout = 2000 # milliseconds before fail_text and fail_color disappears
     fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-    capslock_color = -1
+    capslock_color = rgba(33ccffee)
     numlock_color = -1
     bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
     invert_numlock = false # change color if numlock is off
     swap_font_color = false # see below
+    text_trim = true
 
     position = 0, -20
     halign = center
