--- a/pacman/pacman.conf
+++ b/pacman/pacman.conf
@@ -33,8 +33,8 @@ Architecture = auto
 Color
 #NoProgressBar
 CheckSpace
-#VerbosePkgLists
-#ParallelDownloads = 5
+VerbosePkgLists
+ParallelDownloads = 5
 DownloadUser = alpm
 #DisableSandbox
 ILoveCandy
