--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,41 +1,32 @@
+#include ./themes/Jellybeans
+#include ./themes/Kanagawa_dragon
+#include ./themes/Kaolin-Dark
+include ./Rice.conf
+
 # Fuente
-include ./themes/Tomorrow_Night.conf
+font_family      Terminess Nerd Font
+# bold_font        auto
+# italic_font      auto
+# bold_italic_font auto
 
-font_family Terminess Nerd Font
-bold_font auto
-italic_font auto
-bold_italic_font auto
-
-font_size 12.0
+font_size 24.0
 
 # Cursor
-
-cursor_shape block
-cursor_shape_unfocused unchanged
-#cursor_blink_interval -1 #default del sistema
-
-# Scrollback
-scrollback_lines 500
-scrollback_indicator_opacity 0.0
-scrollback_pager_history_size 0
-scrollback_fill_enlarged_window no
-
-# Mouse
-mouse_hide_wait 0.0
-open_url_with default
-detect_urls yes
-url_excluded_characters
-
-# Notificaciones
-enable_audio_bell yes
-visual_bell_duration 0.0
+# cursor_trail 0
+# cursor_trail_decay 0.1 0.4
+# cursor_trail_start_threshold 2
 
 # Ventana
 remember_window_size  no
-initial_window_width  680
-initial_window_height 500
-window_border_width 2.0pt
-window_margin_width 10
+initial_window_width  82c
+initial_window_height 22c
 
-# Colores
-background_opacity 0.8
+window_margin_width 30 30 30 30
+
+
+# Colores y Fondo
+# foreground #dddddd
+# background #000000
+
+background_opacity 0.95
+# background_blur 0
