--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -26,5 +26,6 @@ inactive_border_color #171717
 # foreground #dddddd
 # background #0e0e0e
 
-background_opacity 0.95
 # background_blur 0
+# background_opacity 0.95
+background_opacity 1
