--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -749,7 +749,7 @@ ascii_distro="arch_small"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(6)
+ascii_colors=(4 4)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
