foot cursor color deprecated

--- a/River/.config/foot/foot.ini
+++ b/River/.config/foot/foot.ini
@@ -89,7 +89,6 @@ font = Terminess Nerd Font:size=14
 
 [cursor]
 # style=block
-color=11111b f5e0dc
 # blink=no
 # blink-rate=500
 # beam-thickness=1.5
@@ -103,10 +102,11 @@ color=11111b f5e0dc
 # long-press-delay=400
 
 [colors]
+cursor=11111b f5e0dc
 # alpha=1.0
 # alpha-mode=default # Can be `default`, `matching` or `all`
 # background=1e1e2e
-background=000000
+background=11111b
 foreground=cdd6f4
 # flash=7f7f00
 # flash-alpha=0.5
