--- a/River/.config/wofi/config
+++ b/River/.config/wofi/config
@@ -1,3 +1,19 @@
 hide_scroll=true
 allow_images=true
-prompt=Search
+image_size=32
+allow_markup=true
+prompt=
+
+key_up=Ctrl-k
+key_down=Ctrl-j
+key_left=Ctrl-h
+key_right=Ctrl-l
+key_expand=space
+
+matching=fuzzy
+
+hide_search=true
+no_actions=true
+
+width=350
+height=300
