--- a/River/.config/foot/foot.ini
+++ b/River/.config/foot/foot.ini
@@ -1,28 +1,28 @@
 [main]
 term = foot
-font = Terminess Nerd Font:size=14
+font = Terminess Nerd Font:size=15
 
 [colors]
-cursor=1e2326 a7c080
-background=1e2326
-foreground=d3c6aa
+cursor=191724 eb6f92
+background=191724
+foreground=fefcff
 
 ## Normal colors
-regular0=272e33
-regular1=e67e80
-regular2=a7c080
-regular3=dbbc7f
-regular4=7fbbb3
-regular5=d699b6
-regular6=83c092
-regular7=9da9a0
+regular0=26233a
+regular1=eb6f92
+regular2=9ccfd8
+regular3=f6c177
+regular4=31748f
+regular5=c4a7e7
+regular6=ebbcba
+regular7=e0def4
 
 ## Bright colors
-bright0=4f5b58
-bright1=e67e80
-bright2=a7c080
-bright3=dbbc7f
-bright4=7fbbb3
-bright5=d699b6
-bright6=83c092
-bright7=d3c6aa
+bright0=47435d
+bright1=ff98ba
+bright2=c5f9ff
+bright3=ffeb9e
+bright4=5b9ab7
+bright5=eed0ff
+bright6=ffe5e3
+bright7=fefcff
