--- a/River/.config/waybar/config.jsonc
+++ b/River/.config/waybar/config.jsonc
@@ -1,49 +1,201 @@
 {
-// Includes
-	"include": [ 
-		"modules/*.jsonc",
-		"modules/custom/*.jsonc",
-		"modules/river/*.jsonc"
-	],
-// Configuration
 	"layer": "top",
 	"position": "top",
-	"exclusive": true,
-	"passthrough": false,
-	"reload_style_on_change": true,
-	"height": 40,
-	//"width": 1000,
-	"spacing": 5,
-	//"margin": 15,
-	"margin-top": 15,
-	"margin-left": 15,
-	"margin-right": 15,
-// Modules
+
 	"modules-left": [
-		"river/tags"
+		"river/tags",
+		"custom/arrow10",
+		"river/window"
 	],
-	"modules-center": [
-		"clock#day",
-		"clock#time",
-		"clock#date"
-	],
+
 	"modules-right": [
-		"group/system",
-		"group/hardware"
+		"custom/arrow9",
+		"pulseaudio",
+		"custom/arrow8",
+		"network",
+		"custom/arrow7",
+		"memory",
+		"custom/arrow6",
+		"cpu",
+		"custom/arrow5",
+		"temperature",
+		"custom/arrow4",
+		"battery",
+		"custom/arrow3",
+		"tray",
+		"custom/arrow2",
+		"clock#date",
+		"custom/arrow1",
+		"clock#time"
 	],
-// Groups
-	"group/system": {
-		"orientation": "horizontal",
-		"modules": [
-			"tray"
-		]
+
+	// Modules
+
+	"battery": {
+		"interval": 10,
+		"states": {
+			"warning": 30,
+			"critical": 15
+		},
+		"format-time": "{H}:{M:02}",
+		"format": "{icon} {capacity}% ({time})",
+		"format-charging": " {capacity}% ({time})",
+		"format-charging-full": " {capacity}%",
+		"format-full": "{icon} {capacity}%",
+		"format-alt": "{icon} {power}W",
+		"format-icons": [
+			"",
+			"",
+			"",
+			"",
+			""
+		],
+		"tooltip": false
 	},
-	"group/hardware": {
-		"orientation": "horizontal",
-		"modules": [
-			"custom/pipewire",
-			"backlight",
-			"battery"
-		]
+
+	"clock#time": {
+		"timezone": "America/Argentina/Cordoba",
+		"interval": 10,
+		"format": "{:%H:%M}",
+		"tooltip": false
+	},
+
+	"clock#date": {
+		"timezone": "America/Argentina/Cordoba",
+		"interval": 20,
+		"format": "{:%e %b %Y}",
+		"tooltip": false
+		//"tooltip-format": "{:%e %B %Y}"
+	},
+
+	"cpu": {
+		"interval": 5,
+		"tooltip": false,
+		"format": " {usage}%",
+		"format-alt": " {load}",
+		"states": {
+			"warning": 70,
+			"critical": 90
+		}
+	},
+
+	"memory": {
+		"interval": 5,
+		"format": " {used:0.1f}G/{total:0.1f}G",
+		"states": {
+			"warning": 70,
+			"critical": 90
+		},
+		"tooltip": false
+	},
+
+	"network": {
+		"interval": 5,
+		"format-wifi": " {essid} ({signalStrength}%)",
+		"format-ethernet": " {ifname}",
+		"format-disconnected": "No connection",
+		"format-alt": " {ipaddr}/{cidr}",
+		"tooltip": false
+	},
+
+	"river/window": {
+		"format": "{}",
+		"max-length": 45,
+		"tooltip": false
+	},
+
+	"river/tags": {
+		"num-tags": 8,
+		"tag-labels": ["一", "二", "三", "四", "五", "六", "七", "八"],
+		"hide-vacant": true
+	},
+
+	"pulseaudio": {
+		"format": "{icon} {volume}%",
+		"format-bluetooth": "{icon} {volume}%",
+		"format-muted": "",
+		"format-icons": {
+			"headphone": "",
+			"hands-free": "",
+			"headset": "",
+			"phone": "",
+			"portable": "",
+			"car": "",
+			"default": ["", ""]
+		},
+		"scroll-step": 1,
+		"on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
+		"tooltip": false
+	},
+
+	"temperature": {
+		"critical-threshold": 90,
+		"interval": 5,
+		"format": "{icon} {temperatureC}°",
+		"format-icons": [
+			"",
+			"",
+			"",
+			"",
+			""
+		],
+		"tooltip": false
+	},
+
+	"tray": {
+		"icon-size": 18
+		//"spacing": 10
+	},
+
+	"custom/arrow1": {
+		"format": "",
+		"tooltip": false
+	},
+
+	"custom/arrow2": {
+		"format": "",
+		"tooltip": false
+	},
+
+	"custom/arrow3": {
+		"format": "",
+		"tooltip": false
+	},
+
+	"custom/arrow4": {
+		"format": "",
+		"tooltip": false
+	},
+
+	"custom/arrow5": {
+		"format": "",
+		"tooltip": false
+	},
+
+	"custom/arrow6": {
+		"format": "",
+		"tooltip": false
+	},
+
+	"custom/arrow7": {
+		"format": "",
+		"tooltip": false
+	},
+
+	"custom/arrow8": {
+		"format": "",
+		"tooltip": false
+	},
+
+	"custom/arrow9": {
+		"format": "",
+		"tooltip": false
+	},
+
+	"custom/arrow10": {
+		"format": "",
+		"tooltip": false
 	}
 }
+
+// vi:ft=jsonc
