--- a/River/.config/waybar/config.jsonc
+++ b/River/.config/waybar/config.jsonc
@@ -3,6 +3,8 @@
 	"position": "top",
 
 	"modules-left": [
+		"custom/launcher",
+		"custom/arrow11",
 		"river/tags",
 		"custom/arrow10",
 		"river/window"
@@ -107,7 +109,7 @@
 	"river/tags": {
 		"num-tags": 8,
 		"tag-labels": ["一", "二", "三", "四", "五", "六", "七", "八"],
-		"hide-vacant": true
+		"hide-vacant": false
 	},
 
 	"pulseaudio": {
@@ -145,6 +147,12 @@
 	"tray": {
 		"icon-size": 18
 		//"spacing": 10
+	},
+
+	"custom/launcher": {
+		"format": "󰣇",
+		"on-click": "wofi -show drun",
+		"tooltip": false
 	},
 
 	"custom/arrow1": {
@@ -193,6 +201,11 @@
 	},
 
 	"custom/arrow10": {
+		"format": "",
+		"tooltip": false
+	},
+
+	"custom/arrow11": {
 		"format": "",
 		"tooltip": false
 	}
