waybar wofi launcher fix

--- a/River/.config/waybar/config.jsonc
+++ b/River/.config/waybar/config.jsonc
@@ -151,7 +151,7 @@
 
 	"custom/launcher": {
 		"format": "󰣇",
-		"on-click": "wofi -show drun",
+		"on-click": "wofi --show drun",
 		"tooltip": false
 	},
 
