--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -1,3 +1,13 @@
+[mgr]
+ratio = [ 1, 3, 4 ]
+linemode = "none"
+
+[preview]
+image_filter = "nearest"
+max_width = 2000
+max_height = 2000
+image_quality = 50
+
 [tasks]
-image_alloc = 1073741824 # 1 GB
-image_bound = [ 10000, 10000 ]
+image_alloc = 0 
+image_bound = [ 0, 0 ]
