--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -2,7 +2,7 @@
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
     # info title
-    prin "\x20\x20N E H O\x20 @\x20 A R C H"
+    prin "\x20\x20\x20N E O\x20 @\x20 A R C H"
     prin "┌─────────────────────┐"
     info "\x20\x20" distro
     info "\x20\x20" de
