--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -3,6 +3,7 @@ ratio = [ 1, 3, 4 ]
 linemode = "none"
 
 [preview]
+cache_dir = "/home/neo/.cache/yazi/"
 image_filter = "nearest"
 max_width = 2000
 max_height = 2000
