--- a/hypr/variables/animations.conf
+++ b/hypr/variables/animations.conf
@@ -2,6 +2,11 @@ animations {
     enabled = true
     # first_launch_animation = true
 
+    # Lime Frenzy GOD
+    # Diablo-2 GOD tambien
+    # Me-2 los trae de arriba y cierra bien
+    # Optimized es Me-2 pero rapido
+
     bezier = default, 0.05, 0.9, 0.1, 1.05
     bezier = wind, 0.05, 0.9, 0.1, 1.05
     bezier = overshot, 0.13, 0.99, 0.29, 1.08
