--- a/hypr/modules/executing.conf
+++ b/hypr/modules/executing.conf
@@ -8,4 +8,4 @@ exec-once = gentoo-pipewire-launcher &
 
 exec-once = /usr/libexec/hyprpolkitagent
 
-exec-once = hyprctl setcursor Moga-Cursor 24
+#exec-once = hyprctl setcursor Moga-Cursor 24
